img tag fixed word-wrap fixed

--- a/src/components/chat.css
+++ b/src/components/chat.css
@@ -18,7 +18,8 @@
     padding: 10px;
     max-width: 50%;
     border-radius: 10px;
-    word-wrap: normal;
+    word-wrap: break-word;
+    white-space: normal;
     font-family: monospace;
 }
 .sentMes {
@@ -31,7 +32,8 @@
     padding: 10px;
     border-radius: 10px;
     max-width: 50%;
-    word-wrap: normal;
+    word-wrap: break-word;
+    white-space: normal;
     font-family: monospace;
 }
 .cover {
